[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "toppy"
version = "0.0.1"
authors = [
  { name="Isaac Meyer", email="imeyer@mgh.harvard.edu" },
]
description = "TOPAS helper functions"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/icmeyer/toppy"
"Bug Tracker" = "https://github.com/icmeyer/toppy"
